added forecast function

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
               </div>
               <!-- Search Box End-->
               <!-- Cards to append API data to-->
-              <div class="col-12 col-md-6" id="weather-container">
-           
-            </div>
+              <div class="col-12 col-md-6" id="weather-container"></div>
           </div>
 
 
