added color to uv value

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               <!-- Search Box End-->
               <!-- Cards to append API data to-->
               <div class="col-12 col-md-6" id="weather-container"></div>
+              <!-- Cards to append API data to End-->
           </div>
 
 
