--- a/index.html
+++ b/index.html
@@ -30,10 +30,15 @@
                       <span class="oi oi-magnifying-glass"></span>
                     </button>
                   </div>
+                <!-- Search History -->
+                  <div class="container"></div>
+                    <div class="row">
+                        <div class="col" id="search-history"></div>
+                    </div>
                 </div>
               </div>
               <!-- Search Box End-->
-              <!-- Cards to append API data to-->
+              <!-- Container to append weather data to-->
               <div class="col-12 col-md-6" id="weather-container"></div>
           </div>
 
