storage set item

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                 <!-- Search History -->
                   <div class="container"></div>
                     <div class="row">
-                        <div class="col" id="search-history"></div>
+                        <div class="col" id="search-history">
+                            <ul class="cityList"></ul>
+                        </div>
                     </div>
                 </div>
               </div>
